--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+   
+</head>
+<body>
+    <div >
+        <div style="background:red;float:left;width:500px;height:600px;"></div>
+    <div style="background:yellow;float:left;width:500px;height:600px;"></div>
+    </div>
+</body>
+</html>
